k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: btng-sovereign
  labels:
    name: btng-sovereign
    app: btng-platform
